--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
-node_modules
+# Node modules
+node_modules/
+
+# Build output
+.next/
+out/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Optional: Ignore all env files except example
+# Uncomment the next line if you want to ignore all env files except `.env.example`
+# .env*
+
+# OS-specific
+.DS_Store
+
+# Vercel
+.vercel/
+
+# VSCode settings (optional)
+.vscode/
